# GradientOS

./: .gitignore  .gitmodules  LICENSE  chart_generator.py  performance_tester.py  pyproject.toml  requirements.txt  run_controller.py  spped suggestions.md  trajectories.json  trajectory_planner.py  udp_client.py  ui_start.py
.github/: FUNDING.yml
diagnostics/: ik_path_diagnostics.py  plot_ik_plan.py
diagnostics/closed_loop/20250629_234720/: ik_plan.csv  joint_path.csv
diagnostics/closed_loop/20250630_001725/: ik_plan.csv  joint_path.csv
diagnostics/closed_loop/20250630_001730/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_155409/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_155452/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_155535/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_161331/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_161641/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_234645/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_234829/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_234846/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_234900/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_234932/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_235628/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_235715/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_235813/: ik_plan.csv
diagnostics/open_loop/20250629_235830/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250629_235843/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001750/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001824/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001829/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001842/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001914/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001940/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_001954/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_002609/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_002627/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_002643/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_002859/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_002916/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_003741/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_003755/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_003812/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_003831/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_003952/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_004012/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_004659/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_005202/: ik_plan.csv  joint_path.csv
diagnostics/open_loop/20250630_005214/: ik_plan.csv  joint_path.csv
docs/: README.md  UI_readme.md  command_api.md  diagnostics.md  feetech_sts3215_instructions.md  ik_solver.md  run_controller.md  servo_driver.md  servo_protocol.md  trajectory_execution.md  trajectory_recorder.md  utils.md
mini-6dof-arm/: create_dh_params.py  dh_params.csv  mini-6dof-arm.urdf  opw-mini-arm.urdf
mini-6dof-arm/stl-files/: L2.stl  L3.stl  L4.stl  L5.stl  base.stl  wrist.stl
recorded_trajectories/: rotysquare.json
scripts/: test_kinematics.py
src/: ik_solver.py
src/[unfinished]/poe_solver/: CMakeLists.txt  bindings.cpp  generate_poe_header.py  math.hpp  readme.md  requirements.txt  solver.cpp  solver.hpp  test.py
src/[unfinished]/poe_solver/mini-arm/: spherical-mini-6dof-arm.urdf
src/[unfinished]/poe_solver/mini-arm/stl-files/: L1.stl  L3.stl  L5.stl
src/[unfinished]/spherical_wrist_solver/: CMakeLists.txt  TODO.md  compile_solver_README.md  requirements.txt  spherical_ik.hpp  spherical_ik_py.cpp  test.py
src/[unfinished]/spherical_wrist_solver/mini-6dof-arm/: spherical-mini-6dof-arm.urdf
src/[unfinished]/spherical_wrist_solver/mini-6dof-arm/stl-files/: base.stl  wrist.stl
src/arm_controller/: __init__.py  command_api.py  servo_driver.py  servo_protocol.py  trajectory_execution.py  utils.py
src/arm_controller/archive [unused scripts]/: servo_controller.py
src/ikfast_solver/: CMakeLists.txt  README.md  __init__.py  ik_wrapper.cpp  ikfast.h  ikfast_solver.cpp  ikfast_wrapper.py  main.cpp  run_ik_solver_example.py
src/numeric_solver/: numeric_k.py  numeric_wrapper.py  test_numeric.py  trac_ik_interface.py
src/numeric_solver/mini-arm/: spherical-mini-6dof-arm.urdf
src/numeric_solver/mini-arm/stl-files/: L2.stl  L4.stl
src/numeric_solver/pyquik/: CMakeLists.txt  bindings.cpp
tests/: README.md  test_driver.py  test_end_to_end.py  test_planning.py  test_protocol.py  test_solver.py
