[build-system]
requires = ["scikit-build-core", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "ikfast_solver"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.scikit-build]
cmake.source-dir = "src/ikfast_solver"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "openrave",
] 